some more cleaning (dd demos are now OK on Windows)